alignment and borders corrected

--- a/SCSS/style.css
+++ b/SCSS/style.css
@@ -12585,7 +12585,25 @@ progress {
   border: 6px solid #0d4f9a;
 }
 
-  @media (max-width:900px){
+
+@media (max-width:1200px){
+  .col2{
+    border: 5px solid #0d4f9a;
+
+  }
+  .col1{
+    border-right:3px solid #0d4f9a;
+    
+  }
+
+  .col3{
+    border-left: 3px solid #0d4f9a;
+  }
+  
+}
+
+
+  @media (max-width:990px){
     .col2{
       border: 5px solid green;
       margin-top: 10px;
